Fixing Header overlap
Fixing header overlap on mobile aspect ratios

--- a/requestPageMockup/Request_Page.css
+++ b/requestPageMockup/Request_Page.css
@@ -47,7 +47,8 @@ li {
 .items {
     position: relative;
     z-index: 99; /*for testing location*/
-    margin-top: 100px;
+    margin-top: 50px;
+    top: 8.5%;
 }
 
 button {
